@@ -20,6 +20,7 @@
  * Exporting relations by class name instead of kpath (may differ from site to site).
  * Using any character to build kpath if no character from the class name can be used.
  * Going through reverse order in console's foreach in case we destroy nodes.
+ * Added support for "target" in [zazen] when rendering links.
 
 == 1.2.0, 1.2.1 2012-05-01
 
